--- a/wp-content/plugins/opal-hotel-room-booking/assets/site/css/opalhotel.css
+++ b/wp-content/plugins/opal-hotel-room-booking/assets/site/css/opalhotel.css
@@ -382,17 +382,20 @@
     color: #FFF;
     border-color: #c29b73; }
   .button.button-primary {
-    letter-spacing: 1px;
-    color: #999;
-    background-color: #fff; }
+    background-color: #43c71c;
+    border: 1px solid #43c71c;
+    color: #fff;
+    padding: 14px; }
     .button.button-primary:hover {
-      color: #c29b73;
-      border-color: #c29b73; }
+         border-color: #43c71c;
+    background: #2d8214; }
   .button.button-default {
     font-weight: 900;
     font-size: 12px; }
     .button.button-default:hover {
-      color: #999; }
+      color: #999; 
+    
+    }
   .button.button-theme {
     color: #FFF;
     background-color: #c29b73;
@@ -2578,14 +2581,23 @@ body.opalhotel-single .sidebar .widget {
     }
     .widget_opalhotel-check-available .opalhotel-form-field .opalhotel-form-field-group i {
       right: 15px;
-      top: 15px; }
+      top: 15px; 
+      color: #43c71c;
+    }
       .rtl .widget_opalhotel-check-available .opalhotel-form-field .opalhotel-form-field-group i {
         left: 15px;
         right: auto; }
     .widget_opalhotel-check-available .opalhotel-form-field .opalhotel-form-field-group input,
     .widget_opalhotel-check-available .opalhotel-form-field .opalhotel-form-field-group select {
-      padding: 7px 40px 7px 15px;
-      line-height: 36px; }
+      background-color: #fff;
+    border: 1px solid #e4e4e4;
+    color: #333;
+    padding: 7px 15px;
+    font-size: 12px;
+    line-height: 1.42857143;
+    background-image: none;
+    
+    }
       .rtl .widget_opalhotel-check-available .opalhotel-form-field .opalhotel-form-field-group input, .rtl
       .widget_opalhotel-check-available .opalhotel-form-field .opalhotel-form-field-group select {
         padding: 7px 15px 7px 40px; }
