--- a/wp-content/plugins/opal-hotel-room-booking/assets/libraries/jBox/jBox.css
+++ b/wp-content/plugins/opal-hotel-room-booking/assets/libraries/jBox/jBox.css
@@ -3,7 +3,9 @@
 
 .jBox-wrapper {
   text-align: left;
-  box-sizing: border-box;
+    box-sizing: border-box;
+    overflow-x: scroll;
+    height: 100%;
 }
 
 .jBox-title,
@@ -20,6 +22,8 @@
 
 .jBox-content {
   padding: 8px 10px;
+  overflow-x: hidden;
+  overflow-y: auto;
   transition: opacity .2s;
 }
 
