--- a/wp-content/plugins/opal-hotel-room-booking/assets/libraries/jBox/jBox.css
+++ b/wp-content/plugins/opal-hotel-room-booking/assets/libraries/jBox/jBox.css
@@ -3,7 +3,10 @@
 
 .jBox-wrapper {
   text-align: left;
-  box-sizing: border-box;
+    box-sizing: border-box;
+    overflow-x: scroll;
+    height: 100%;
+    top:50px !important;
 }
 
 .jBox-title,
